DAY03/trace.txt
Subject: [Deepthought] Your trace for Day 03
From: deepthought-no-reply@21-school.ru
To: jjerde@student.21-school.ru
Date: Sat, 22 Sep 2018 14:31:50 +0300

= Host-specific information ====================================================
$> hostname; uname -msr
e1r9p5.21-school.ru
Darwin 16.7.0 x86_64
$> date
Sat Sep 22 14:31:36 MSK 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: intra/2018/activities/piscine_c_day_03/jjerde

= Git history ==================================================================
$> git -C /var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user log --pretty='%H - %an, %ad : %s'
4703ce5bce0589a75e86fdb544a3dba33cf29976 - Jhiqui Jerde, Fri Sep 21 20:47:00 2018 +0300 : What a pice of shit...

= Collected files ==========================================
$> ls -lAR /var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user
total 8
-rw-r--r--  1 deepthought  deepthought  503 Sep 22 14:31 __GIT_HISTORY
drwxr-xr-x  4 deepthought  deepthought  136 Sep 22 14:31 ex00
drwxr-xr-x  3 deepthought  deepthought  102 Sep 22 14:31 ex01
drwxr-xr-x  3 deepthought  deepthought  102 Sep 22 14:31 ex02
drwxr-xr-x  4 deepthought  deepthought  136 Sep 22 14:31 ex03

/var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user/ex00:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Sep 22 14:31 .DS_Store
-rw-r--r--  1 deepthought  deepthought  1076 Sep 22 14:31 ft_ft.c

/var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user/ex01:
total 8
-rw-r--r--  1 deepthought  deepthought  975 Sep 22 14:31 ft_ultimate_ft.c

/var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user/ex02:
total 8
-rw-r--r--  1 deepthought  deepthought  991 Sep 22 14:31 ft_swap.c

/var/folders/9p/6nqx1p5x65ld8tf2jwss4m0m0000gq/T/tmp1ehOok/user/ex03:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Sep 22 14:31 .DS_Store
-rw-r--r--  1 deepthought  deepthought  1039 Sep 22 14:31 ft_div_mod.c

= ex00 =========================================================================
$> /usr/bin/norminette -R CheckForbiddenSourceHeader ft_ft.c | grep -E '^(Error|Warning)'
Error: global scope bad aligned
Error (line 15): multiple empty lines
Error (line 26, col 5): a is instanciated during declaration
Error (line 31, col 8): missing parentheses in return statement

Norme check FAILED
Grade: 0

= ex01 =========================================================================
$> /usr/bin/norminette -R CheckForbiddenSourceHeader ft_ultimate_ft.c | grep -E '^(Error|Warning)'

$> gcc -Wextra -Wall -Werror ft_ultimate_ft.c ft_putchar.c test_ft_ultimate_ft.c -o user_exe

= Test 1 ===================================================
$> ./wfyxvtc0d7n3f2ujhmcar8x8
$> diff -U 3 user_output_test1 test1.output | cat -e

Diff OK :D
Grade: 5

= ex02 =========================================================================
$> /usr/bin/norminette -R CheckForbiddenSourceHeader ft_swap.c | grep -E '^(Error|Warning)'

$> gcc -Wextra -Wall -Werror ft_swap.c main.c ft_putchar.c -o user_exe

= Test 1 ===================================================
$> ./l1rkirdrfr70elkc1wm5u0kr
$> diff -U 3 user_output_test1 test1.output | cat -e

Diff OK :D
Grade: 5

= ex03 =========================================================================
$> /usr/bin/norminette -R CheckForbiddenSourceHeader ft_div_mod.c | grep -E '^(Error|Warning)'

$> gcc -Wextra -Wall -Werror main.c ft_putchar.c ft_div_mod.c -o user_exe
ft_div_mod.c:20:9: error: use of undeclared identifier 'itsdev'; did you mean 'itsdiv'?
        *div = itsdev;
               ^~~~~~
               itsdiv
ft_div_mod.c:16:6: note: 'itsdiv' declared here
        int     itsdiv;
                ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= ex04 =========================================================================
Nothing turned in
Grade: 0

= ex05 =========================================================================
Nothing turned in
Grade: 0

= ex06 =========================================================================
Nothing turned in
Grade: 0

= ex07 =========================================================================
Nothing turned in
Grade: 0

= ex08 =========================================================================
Nothing turned in
Grade: 0

= ex09 =========================================================================
Nothing turned in
Grade: 0

= Final grade: 0 ===============================================================

END
